드림씨어터 슬라이드 구현

--- a/dreamtheatre.html
+++ b/dreamtheatre.html
@@ -6,7 +6,9 @@
     <title>드림씨어터</title>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/dreamtheatre.css" rel="stylesheet">
+    <link href="css/slick.css" rel="stylesheet">
     <script src="js/jquery-3.7.0.min.js"></script>
+    <script src="js/plug/slick.min.js"></script>
     <script src="js/dreamtheatre.js" defer></script>
 </head>
 <body>
@@ -83,7 +85,14 @@
             </div><!--hrow3-->
         </div><!--hwrap-->
     </header>
+    <!--헤더 끝-->
+    <section class="s1">
+        <div class="mainSlider">
+            <div class="slide slide1"></div>
+            <div class="slide slide2"></div>
+            <div class="slide slide3"></div>
+        </div><!--mainSlider-->
+    </section><!--s1-->
 
-    
 </body>
 </html>
