--- a/뱅앤올룹슨/b&o.html
+++ b/뱅앤올룹슨/b&o.html
@@ -16,30 +16,39 @@
             font-family: 'Pretendard-Regular';
         }
         .wrap {
+            position: relative;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
-            width: 57%;
+            width: 57.81%;
+            height: 45%;
             padding: 268px 0;
+            background-color: antiquewhite;
         }
         .img {
             position: relative;
-            width: 43%;
-            aspect-ratio: 0.87 / 1;
+            width: 42.79%;
+            padding-bottom: 49.09%;
+            border: 1px solid ;
         }
         .pic {
+            position: absolute;
+            left: 0;
+            top: 0;
             width: 100%;
             height: 100%;
+            /* padding-top: 100%; */
             border-radius: 400px 400px 0 0;
             overflow: hidden;
+            border: 3px solid;
         }
         .item {
+            /* position: absolute; */
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+            padding-bottom: 100%;
             background-position: center;
-            background-repeat: no-repeat;
             background-size: cover;
+            
         }
         .item1 {background-image: url('');}
         .item2 {background-image: url('https://images.ctfassets.net/8cd2csgvqd3m/6esXZtaZQ68kezijmo91zS/09608aea6838c08bbd3931d08211a6d5/Beoplay-HX-Goldtone-Lifestyle.png?q=90&fm=webp&w=720&h=720&fit=fill');}
@@ -61,7 +70,7 @@
             opacity: .4;
         }
         .content {
-            width: 570px;
+            width: 51%;
             padding-top: 50px;
             /* padding-left: 95px; */
         }
@@ -101,7 +110,7 @@
         .about .item_txt {
             border: 1px solid;
         }
-        @media screen and (max-width: 1100px) {
+        @media all and (max-width: 1110px) {
             .wrap {
                 position: relative;
                 width: calc(100% - 60px);
@@ -142,9 +151,7 @@
     <div class="wrap">
         <div class="img">
             <div class="pic">
-                <div class="item item1">
-                    <img src="https://images.ctfassets.net/8cd2csgvqd3m/3z61ZdM0BuTIuAWoxO5mq1/2be1c050aae41b9b01f2bca8fd8578b5/A9-Solo_CGI_Lifestyle_1000x1000.jpg?q=90&fm=webp&w=828&h=828&fit=fill">
-                </div>
+                <div class="item item1"><img src="https://images.ctfassets.net/8cd2csgvqd3m/3z61ZdM0BuTIuAWoxO5mq1/2be1c050aae41b9b01f2bca8fd8578b5/A9-Solo_CGI_Lifestyle_1000x1000.jpg?q=90&fm=webp&w=828&h=828&fit=fill"></div>
                 <div class="item item2"></div>
                 <div class="item item3"></div>
                 <div class="item item4"></div>
