--- a/뱅앤올룹슨/b&o.html
+++ b/뱅앤올룹슨/b&o.html
@@ -15,43 +15,22 @@
             font-family: 'Pretendard-Regular';
         }
         
-        .best {
-            background-color: blueviolet;
-            padding-left: 360px;
-            /* width: 100%; */
-            overflow: hidden;
+        .wrap {
+            width: 100%;
+            height: 100vh;
+            background-color: aquamarine;
         }
-        .best .goods {
-        }
-        .best .col {
-            width: 384px;
-            height: 384px;
-            background-color: indianred;
-            border: 1px solid white;
+        section {
+            padding: 200px 0;
+            background-color: beige;
         }
         
     </style>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
 <body>
-    <div class="best">
-        <div class="info">
-            <h2>베스트 컬렉션</h2>
-            <p>최고의 순간을 최고의 아이템으로 즐겨보세요.<br>마법같은 순간을 선사합니다.</p>
-        </div>
-        <div class="goods">
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
-    </div><!--best-->
+    <div class="wrap"></div>
+    <section></section>
 
 
     <script src="jquery-3.7.0.min.js"></script>
