--- a/vh연습.html
+++ b/vh연습.html
@@ -17,19 +17,25 @@
         }
         .ice-img-wrap {
             position: absolute;
-            bottom: 20%;
+            bottom: 40%;
             left: 50%;
             transform: translateX(-50%);
             width: 68.06%;
-            border: 2px solid;
+            z-index: 999;
         }
         .ice-img-wrap img {
             width: 100%;
         }
         .ice-txt-wrap {
+            position: absolute;
+            bottom: 0;
             width: 100%;
-            height: 60%;
+            height: 68%;
+            padding-top: 35%;
+            box-sizing: border-box;
             background-color: lightpink;
+            text-align: center;
+            border-radius: 50px 50px 0 0;
         }
     </style>
 </head>
