--- a/vh연습.html
+++ b/vh연습.html
@@ -9,15 +9,19 @@
     <style>
         * {margin: 0; padding: 0; text-decoration: none; color: inherit}
         .swiper {
+            position: relative;
             width: 100%;
             height: 100vh;
         }
         .swiper-slide {
-            position: relative;
+            position: absolute;
+            bottom: 0;
+            height: 80%;
+            border: 1px solid;
         }
         .ice-img-wrap {
             position: absolute;
-            bottom: 40%;
+            top: 0;
             left: 50%;
             transform: translateX(-50%);
             width: 68.06%;
@@ -28,10 +32,11 @@
         }
         .ice-txt-wrap {
             position: absolute;
-            bottom: 0;
+            top: 0;
             width: 100%;
-            height: 68%;
-            padding-top: 35%;
+            height: 100vh;
+            margin-top: 35%;
+            padding-top: 30%;
             box-sizing: border-box;
             background-color: lightpink;
             text-align: center;
