--- a/vh연습.html
+++ b/vh연습.html
@@ -45,6 +45,29 @@
         .slide1 .ice-txt-wrap {background-color: lightblue;}
         .slide2 .ice-txt-wrap {background-color: lightgoldenrodyellow;}
         .slide3 .ice-txt-wrap {background-color: lightpink;}
+
+        @media all and (min-width: 768px) {
+            .swiper-slide {
+                position: absolute;
+            }
+            .swiper-slide > div {
+                top:0;
+                left: 50%;
+                width: 50%;
+                height: 100%;
+                background-color: antiquewhite;
+            }
+            .ice-img-wrap {
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translate(-50%, -50%);
+                background-color: aqua;
+                width: 40%;
+            }
+            .ice-img-wrap img {
+            }
+        }
     </style>
 </head>
 <body>
