--- a/vh연습.html
+++ b/vh연습.html
@@ -68,6 +68,11 @@
             .ice-img-wrap img {
             }
         }
+        section {
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
@@ -128,6 +133,11 @@
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
     </div>
+    <section>
+        <div><img src="images/top1.png"></div>
+        <div><img src="images/top1.png"></div>
+        <div><img src="images/top1.png"></div>
+    </section>
 
     <!--swiper-->
     <script src="js/jquery-3.7.0.min.js"></script>
