--- a/경주여행.html
+++ b/경주여행.html
@@ -23,9 +23,9 @@
         .banner .bannerWrap {width: 90%; margin: 0 auto;}
         .banner .banner-slide {border-radius: 15px;}
         .banner .banner-slide > div > div {position: relative;width: 100%;height: 300px;background-position: center;background-repeat: no-repeat;background-size: cover;}
-        .banner .spot1 {background-image: url('../드림씨어터/images/banner1.jpg');}
-        .banner .spot2 {background-image: url('../드림씨어터/images/banner2.jpg');}
-        .banner .spot3 {background-image: url('../드림씨어터/images/banner3.jpg');}
+        .banner .spot1 {background-image: url('banner1.jpg');}
+        .banner .spot2 {background-image: url('banner2.jpg');}
+        .banner .spot3 {background-image: url('banner3.jpg');}
         .banner .txtWrap {position: absolute;left: 0; bottom: 0;width:100%; color: white; padding-left:30px; padding-bottom: 30px;background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.7));}
         .banner .txtWrap h2 {font-size: 32px;font-family: 'EASTARJET-Medium';letter-spacing: 2px;}
         .banner .txtWrap p {font-size: 18px;font-family: 'Pretendard-Regular';padding: 3px 0;}
