--- a/경주여행.html
+++ b/경주여행.html
@@ -56,10 +56,10 @@
         .food .foodWrap {width: 90%;margin: 0 auto;padding-bottom: 50px;}
         .food .swiper {margin-top: 20px;}
         .food .swiper-slide > div {width:100%;padding-top:100%;background-position: center;background-repeat: no-repeat;background-size: cover;border-radius: 20px;}
-        .food .swiper-slide .bread {background-image: url('../10bread.jpeg');}
-        .food .swiper-slide .corn {background-image: url('../corn.jpeg');}
-        .food .swiper-slide .candy {background-image: url('../candy.jpeg');}
-        .food .swiper-slide .chicken {background-image: url('../chicken.jpeg');}
+        .food .swiper-slide .bread {background-image: url('../드림씨어터/10bread.jpeg');}
+        .food .swiper-slide .corn {background-image: url('../드림씨어터/10bread.jpeg');}
+        .food .swiper-slide .candy {background-image: url('../드림씨어터/10bread.jpeg');}
+        .food .swiper-slide .chicken {background-image: url('../드림씨어터/10bread.jpeg');}
     </style>
 </head>
 <body>
