--- a/달꾸.html
+++ b/달꾸.html
@@ -5,74 +5,136 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .top-basic {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 99999;
-            text-align: center;
-            /* 높이를 변경하고 싶을 때는 padding: 10px 0;에서 10 숫자를 키우거나 줄이면 됩니다.
-               padding: (위아래 여백) (양 옆 여백);
-               ex. padding: 10px 5px;
-                   => 위아래 여백 10px, 양 옆 여백 5px
-            */
-            padding: 10px 0;
-            /* 배경색을 넣고 싶을 때는 background: #aaa;에서 #aaa대신 바꾸고자 하는 색의 헥스코드or색상명을 적어주세요.
-               투명한 배경색은 background: 색상; 이 줄을 없애거나 색상명 위치에 transparent를 적으면 됩니다.
-               ex. background: red;
-               ex. background: #ccc;
-               ex. background: transparent;
-            */
-            background: #aaa;
+        @font-face {
+            font-family: 'Pretendard-Regular';
+            src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+            font-weight: 400;
+            font-style: normal;
         }
-        .top-move1 {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 99999;
-            text-align: center;
-            padding: 10px 0;
-            background: #ccc;
+        * {font-family: 'Pretendard-Regular';}
+        .hide {display:none;}
+        label[for^="ex"] {
+            background: yellow;
+            padding: 3px;
+            color: red;
+            margin-left: 5px;
+            cursor: pointer;
         }
-        .top-move2 {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 99999;
-            text-align: center;
-            padding: 10px 0;
-            background: #ccc;
+        .hide + label + span {
+            display: none;
+            padding:5px 0;
+            color: red;
         }
-        .top-move3 {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 99999;
-            padding: 10px 0;
-            background: #ccc;
-        }
+        input[id^="ex"]:checked + label + span {display: inline-block;}
     </style>
 </head>
 <body>
-    <!--공지글-->
-    <div class="top-basic">
-        고정된 공지글입니다.
-    </div>
+    <div class="content">
+        <h3>HTML이란?</h3>
+        <pre>
+- 웹 페이지를 만드는 뼈대로 태그를 사용하여 작성합니다.
+  태그는 <span style="color:red;font-weight: bold;"><여는태그><&#47;닫는태그></span>로 작성하며,
+  일부 태그는 '닫는태그' 없이 사용이 가능합니다.
+  <ins>[ 주의! 닫는 태그가 없으면 오류가 발생할 수 있습니다. ]</ins>
 
-    <div class="top-move1">
-        <marquee>오른쪽에서 왼쪽으로 흘러가는 공지입니다.</marquee>
-    </div>
+  ex. &lt;div&gt; 내용입니다. &lt;/div&gt;
 
-    <div class="top-move2">
-        <marquee behavior="alternate">좌우로 움직이는 공지입니다.</marquee>
-    </div>
+- 태그에는 고유한 이름을 부여할 수 있습니다.
+  여는 태그 안에 'class'속성이나 'id'속성을 넣어 이름을 작성하면 됩니다.
+  이름은 영문 소문자를 사용하고 띄어쓰기 대신 '-', '_'을 사용하여 단어를 연결합니다.
+  이름의 중간과 끝에 숫자를 넣을 수 있지만 첫 문자로 숫자나 특수기호를 사용할 수 없습니다.
+  작성 방법은 태그 안에 'class="이름"' 또는 'id="이름"'으로 작성합니다.
+  여러 태그에 같은 class명을 중복으로 사용할 수 있지만 id명은 중복 사용이 불가능합니다.
+  <ins>[ 주의! 태그명과 클래스/아이디 속성 사이에는 꼭 띄어쓰기를 해주세요. ]</ins>
 
-    <div class="top-move3">
-        <marquee direction="up" scrollamount="4" style="text-align: center;">위아래로 움직이는 공지입니다.</marquee>
-    </div>
+  ex. &lt;div <span style="color:red;">class="name"</span>&gt;&lt;/div&gt;
+      &lt;div <span style="color:red;">class="name1"</span>&gt;&lt;/div&gt;
+      &lt;div <span style="color:red;">class="class-name"</span>&gt;&lt;/div&gt;
+      &lt;div <span style="color:red;">id="name"</span>&gt;&lt;/div&gt;
+      &lt;div <span style="color:red;">id="name2"</span>&gt;&lt;/div&gt;
+      &lt;div <span style="color:red;">id="id_name"</span>&gt;&lt;/div&gt;
+
+- 태그 안에 태그를 넣어 사용할 수 있습니다. 태그 안의 태그를 작성 시 'Tab'키보드를 사용하여
+  들여쓰기를 하면 가독성을 높일 수 있습니다.
+
+  ex.
+  &lt;div&gt;
+     &lt;div&gt;
+         내용입니다.
+     &lt;/div&gt;
+  &lt;/div&gt;
+        </pre>
+             
+        <h3>CSS란?</h3>
+        <pre>
+- html로 작성한 웹 문서를 꾸며주는 것으로 주로 <span style="color:red;font-weight: bold;">&lt;style&gt;&lt;/style&gt;</span>태그 안에
+  코드를 작성하는 방법을 사용합니다.
+
+  [ css 문법 ]
+  &lt;style&gt;
+      선택자 {
+            속성: 속성값;
+      }
+  &lt;style&gt;
+  => 선택자는 스타일을 입히고자 하는 요소(태그)를 말합니다.
+  => 속성은 어떤 스타일을 입힐지 종류를 말하고 속성값은 해당 속성이 가지는 스타일값을 말합니다.
+  => 선택자에는 태그 외에도 태그의 이름을 넣어 작성할 수 있습니다.
+        class명의 경우 이름 앞에 '.'을 붙여 작성하며, id명은 이름 앞에 '#'를 붙여 작성합니다.
+  
+  ex.
+  &lt;style&gt;
+      div {background: red;}<input type="checkbox" class="hide" id="ex1"><label for="ex1">설명보기</label>
+      <span class="ex">=> div태그의 배경(속성)을 'red(속성값)' 색으로 바꾸겠다.</span>
+      .class-name {color: blue;}<input type="checkbox" class="hide" id="ex2"><label for="ex2">설명보기</label>
+      <span class="ex">=> class명이 'class-name'인 태그의 글자색(속성)을 'blue(속성값)' 색으로 바꾸겠다.</span>
+      #id-name {font-weight: bold;}<input type="checkbox" class="hide" id="ex3"><label for="ex3">설명보기</label>
+      <span class="ex">=> id명이 'id-name'인 태그의 글자굵기(속성)을 'bold(속성값)'로 바꾸겠다.</span>
+  &lt;style&gt;
+
+- 'style'태그를 사용하는 방법 외에도 태그 안에 'style'속성을 넣어 css를 적용할 수도 있습니다.
+  이 때, 태그 안에 'style'속성을 넣어 적용한 css가 'style'태그를 사용하여 적용한 css보다 우선적으로 적용됩니다.
+  
+  [ css 문법 ]
+  &lt;여는태그 style="속성: 속성값;"&gt;&lt;닫는태그&gt;
+
+  ex. &lt;div style="color": red;"&gt;&lt;div&gt;
+
+- '속성값'과 ';' 사이에 '!important'를 작성할 시 해당 스타일이 가장 우선적으로 적용됩니다.
+  <ins>[ 주의! '!important'앞에 꼭 띄어쓰기를 해주세요. ]</ins>
+
+  ex. &lt;div style="color": red !important;"&gt;&lt;div&gt;
+        </pre>
+        <hr>
+        <h3>다음카페 꾸미기</h3>
+        <h4>1) 폰트 적용하기</h4>
+        <pre>
+* 주의! 눈누폰트 사용 기준 입니다.
+(1) 눈누폰트 페이지에 들어간다.
+(2) 원하는 폰트를 선택한 후 우측의 '웹폰트 사용' 코드를 복사한다.
+    - @font-family {~~} 라고 적힌 코드입니다.
+(3) '스타일태그' 안에 복사한 코드를 붙여넣기 한다.
+(4) '{}'안에 'font-family: ~~ ;'라고 적힌 줄을 복사한다.
+(5) 'style'태그 안에 선택자와 '{}'를 작성하고 '{}'안에 복사한 'font-family: ~;'를 붙여넣는다.
+
+ex.
+&lt;style&gt;
+    @font-face {
+        <span style="color: red;">font-family: 'Pretendard-Regular';</span>
+        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+        font-weight: 400;
+        font-style: normal;
+    }
+    * {font-family: 'Pretendard-Regular';}<input type="checkbox" class="hide" id="ex4"><label for="ex4">설명보기</label>
+    <span class="ex">=> 선택자에 '*'를 사용하면 모든 태그를 선택할 수 있습니다.</span>
+&lt;/style&gt;
+        </pre>
+        <h4>2) 이미지 소스 가져오기</h4>
+        <pre>
+(1) 개인 카페에 적용하고자 하는 이미지를 올린다.
+(2) 이미지 업로드 후 이미지를 우클릭하여 '이미지 주소 복사'를 누른다.
+    - 'https://t1.~~'으로 시작하는 주소입니다.
+(3) 복사한 이미지 주소를 원하는 곳에 붙여넣는다
+        </pre>
+    </div><!--content-->
 </body>
 </html>
