--- a/달꾸.html
+++ b/달꾸.html
@@ -26,6 +26,14 @@
             color: red;
         }
         input[id^="ex"]:checked + label + span {display: inline-block;}
+        .box {
+            display: inline-block;
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin: 5px 10px;
+            background: #eee;
+        }
+
     </style>
 </head>
 <body>
@@ -97,7 +105,7 @@
   [ css 문법 ]
   &lt;여는태그 style="속성: 속성값;"&gt;&lt;닫는태그&gt;
 
-  ex. &lt;div style="color": red;"&gt;&lt;div&gt;
+  ex. &lt;div style="color: red;"&gt;&lt;div&gt;
 
 - '속성값'과 ';' 사이에 '!important'를 작성할 시 해당 스타일이 가장 우선적으로 적용됩니다.
   <ins>[ 주의! '!important'앞에 꼭 띄어쓰기를 해주세요. ]</ins>
@@ -134,6 +142,76 @@ ex.
 (2) 이미지 업로드 후 이미지를 우클릭하여 '이미지 주소 복사'를 누른다.
     - 'https://t1.~~'으로 시작하는 주소입니다.
 (3) 복사한 이미지 주소를 원하는 곳에 붙여넣는다
+        </pre>
+        <h4>3) 배경 적용하기</h4>
+        <strong>- 배경색 넣기</strong>
+        <pre>
+(1) 'style'태그 안에 아래 코드를 적어주세요.
+<div class="box">#mArticle > div,
+.menuBox,
+#primaryContent.primary_content,
+#primaryContent .cont_comment {background: unset;}
+.bg_mine, .list_comment li {background: unset !important;}
+</div>
+(2) 'style' 태그 안에 아래 코드를 적고, '속성값'에 바꾸고자 하는 색의 헥스코드or컬러영문명을 적어주세요.
+<div class="box">body {background: 속성값;}</div>
+        </pre>
+        <strong>- 배경 이미지 넣기</strong>
+        <pre>
+(1) 'style'태그 안에 아래 코드를 적어주세요.
+<div class="box">#mArticle > div,
+.menuBox,
+#primaryContent.primary_content,
+#primaryContent .cont_comment {background: unset;}
+.bg_mine, .list_comment li {background: unset !important;}
+</div>
+(2) 'style' 태그 안에 아래 코드를 적고, '이미지주소'에 복사한 이미지 주소를 붙여넣어 주세요.
+<div class="box">body {background: url('이미지주소') repeat center / contain;}</div>
+        </pre>
+        <h4>4) 모바일 앱 제목에 이미지 넣기</h4>
+        <pre>
+(1) 'style'태그 안에 아래 코드를 적어주세요.
+<div class="box">#mArticle > div:nth-child(1) *:not(.tit_subject) {
+    display: none;
+}
+#mArticle .cafeview_subject .tit_subject {
+    position: absolute;
+    bottom:0;
+    right:0;
+}
+</div>
+(2) 'style' 태그 안에 아래 코드를 적고, '이미지주소'에 적용하고자 하는 이미지의 주소를 넣어주세요.
+<div class="box">#mArticle > div:nth-child(1) {
+    position: relative;
+    height: calc(100vw / 1.78 );
+    background: url('이미지주소');
+}
+</div>
+        </pre>
+        <h4>5) 광고창 없애기</h4>
+        <pre>
+(1) 'style'태그 안에 아래 코드를 작성해주세요.
+<div class="box">.banner_wrapper {display:none;}</div>
+        </pre>
+        <h4>6) 달리는 용쿠</h4>
+        <pre>
+(1) 아래 코드를 'style' 태그 안에 넣어주세요.
+<div class="box">.brave {
+    position: fixed;
+    bottom:0;
+    left:-50px;
+    width:50px;
+}
+.brave img {margin: 0 !important;}
+#mArticle .brave {animation: run 5s infinite linear;}
+#primaryContent .brave {animation: run 15s infinite linear;}
+@keyframes run {
+    100% {left:100%;}
+}
+</div>
+(2) html삽입창에 아래 코드를 입력해주세요.
+<div class="box">&lt;div class="brave"&gt;&lt;img src="https://t1.daumcdn.net/cafeattach/1XKJt/2a3d4d756f8398a8b2103b48eed5a9f1871199ab" width="50"&gt;&lt;  /div&gt;
+</div>
         </pre>
     </div><!--content-->
 </body>
